# rpm1

./: README.md  prj.conf
RemoteMotorController/: settings.gradle.kts
RemoteMotorController/app/: build.gradle.kts
RemoteMotorController/app/src/androidTest/java/com/remotemotorcontroller/: ExampleInstrumentedTest.kt
RemoteMotorController/app/src/main/: AndroidManifest.xml
RemoteMotorController/app/src/main/java/com/remotemotorcontroller/: App.kt  README.md
RemoteMotorController/app/src/main/res/drawable/: ic_arrow_back.xml  ic_chevron_right.xml  ic_profile.xml  ic_refresh.xml  ic_search.xml
RemoteMotorController/app/src/main/res/layout/: activity_control.xml  activity_main.xml  activity_settings.xml  bs_analy_config.xml  bs_ar_config.xml  bs_ble_config.xml  bs_config_host.xml  device_item.xml  fragment_analytics.xml  fragment_control.xml  fragment_settings.xml  scan_devices.xml
RemoteMotorController/app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
RemoteMotorController/app/src/main/res/values-night/: themes.xml
RemoteMotorController/gradle/: libs.versions.toml
RemoteMotorController/gradle/wrapper/: gradle-wrapper.properties
firmware/: .gitignore  CMakeLists.txt  README.md  app.overlay  loader.overlay  prj.conf  version.json
firmware/include/: bluetooth.h  motor.h  motor_sim.h
firmware/src/: main.c
firmware/src/bluetooth/: bluetooth.c  bluetooth.h
firmware/src/motor/: motor.c
firmware/src/simulation/: motor_sim.c
firmware/src/watchdog/: watchdog.c
src/: main.c
src/bluetooth/: bluetooth.c
(+23 files in other folders)
