cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(remote_motor_fw)

zephyr_include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

target_sources(app PRIVATE
  src/main.c
  src/bluetooth/bluetooth.c
  src/simulation/motor_sim.c
  src/watchdog/watchdog.c
  src/motor/motor.c
)
